[package]
name = "dsp-bp"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
strum = { version = "0.26", features = ["strum_macros", "derive"] }
flate2 = "1.0"
base64 = "0.22"
urlencoding = "2.1"
log = { version = "0.4.25", features = ["serde"] }
env_logger = "0.11"

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
